Added an inquisitor greyfax image and some other elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
 <h1>Hey. I'm a big heading</h1>
-<p>Heya. I'm a paragraph element. </p>
+<p>Heya. I'm a <b>paragraph</b> element. </p>
 <a href="https://google.com" target="_blank" title="Let's go to google">This is a link. Clicky</a>
+<p>My name is:<br>
+Inquisitor Greyfax</p>
+<img src="https://scg-static.starcitygames.com/articles/2022/09/46e05c48-003-1.jpg">
+</body>
+</html>
