--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Adeptus Mechanicus: the Xenarites</title>
-	<link rel="icon" href="https://static.wikia.nocookie.net/warhammer40k/images/0/07/Adeptus_mecanics.jpg/revision/latest?cb=20090912170723">
+	<link rel="icon" href="img/adeptus_mechanicus.jpeg">
 </head>
 <body>
 	<!-- header element -->
