--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Adeptus Mechanicus: the Xenarites</title>
 	<link rel="icon" href="img/adeptus_mechanicus.jpeg">
+
+		<!--Font family -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			<link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" type="text/css" href="css/admech.css">
 </head>
 <body>
 	<!-- header element -->
-	<head>
+	<header>
 		<img src="img/stygies_VIII.jpeg"
 		width="810"
 		height="372" 
 		>
 		<h1>Xenarites of the Adeptus Mechanicus</h1>
-	</head>
+	</header>
 
 	<!-- main element  -->
 	<main>
